@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class Jobs {
    - String description

    + Jobs(description)
}

class Manager {
    - String name
    - String role
    - String phone
    - String email

    + anyEmployeeHasEmail(email)
    + Manager(name, role, phone, email, postalAddress, manager)
    + createJob((skills needed)
}

class JobsRepository {
    + getTaskCategoryByDescription(description)
}

class EmployeeRepository {
    + getOrganizationByEmployeeEmail(email)
}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getJobsRepository()
    + getEmployeeRepository()
}

class RegisterJobController {
    + RegisterJobController(organizationRepository, taskCategoryRepository)
    + getJobList()
    + createJob(skills needed)
}

note bottom of JobsRepository
    - used for accessing
    the jobs
end note

class RegisterJobUI {
}

Repositories -> Repositories : instance

RegisterJobUI .> RegisterJobController

RegisterJobController .> Repositories : repositories

Repositories -> "1" JobsRepository

RegisterJobController ..> Jobs : jobs
RegisterJobController ..> EmployeeRepository : employeeRepository


Repositories --> "1" EmployeeRepository

EmployeeRepository --> "*" Manager

RegisterJobController ..> "1" Manager : manager
JobsRepository "1" --> "*" Jobs : jobs
Manager "1" --> "1..*" Jobs : register

@enduml